# TTNOpt

./: .gitignore  .readthedocs.yml  README.md  blocksparse.py  dev-requirements.txt  dmrg.py  dmrg_test.py  main.py  pyproject.toml  requirements.txt  run_test.sh  sample_dmrg.py  sample_u1_dmrg.py  setup.py  test_sparse.py  tox.ini
.github/workflows/: unittest.yml
docs/: build_docs.sh  requirements.txt  ttnopt.rst
docs/source/: conf.py  index.rst  modules.rst  ttnopt.rst  ttnopt.src.rst  watanabe.bib
sample/: dmrg.py  tdvp.py
sample/Hieralchical/: make_csv.py
sample/factorize_tensor/: .gitignore  factorize_tensor.py  input.yml  input_mps.yml  input_ttn.yml  interleaved_mps.yml  interleaved_ttn.yml  make_data.py  plot.py  standard_mps.yml  standard_mps_reduction.yml  standard_ttn.yml
sample/factorize_tensor_copy/: input.yml  make_data.py
sample/ground_state_search/: input.yml  input_test.yml  make_dat.py
sample/ground_state_search2/: input_test.yml
sample/ground_state_search_ising/: input.yml  make_dat.py
sample/ground_state_search_u1/: input.yml  (+1 more)
src/: DMRG.py  DMRGSparse.py  DataEngine.py  Observable.py  PhysicsEngine.py  PhysicsEngineSparse.py  TDVP.py  TTN.py  TwoSiteUpdater.py  functionTTN.py
tests/: test_dmrg.py  test_dmrg_u1.py  test_u1_dmrg.py
ttnopt/: DMRG.py  DMRGSparse.py  DataEngine.py  Observable.py  PhysicsEngine.py  PhysicsEngineSparse.py  TDVP.py  TTN.py  TwoSiteUpdater.py  TwoSiteUpdaterSparse.py  __init__.py  factorize_tensor copy.py  factorize_tensor.py  functionTTN.py  ground_state_search.py  hamiltonian.py  initialTTN.py
(+365 files in other folders)
